--- a/inMyRoom_vulkan/CMakeLists.txt
+++ b/inMyRoom_vulkan/CMakeLists.txt
@@ -17,6 +17,13 @@ if (MSVC)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
     set(relFlags "/Ox /Ob2 /Oi /Ot /GT /GF /GS- /fp:fast /fp:except- /MP")
     set(relLinkFlags "/OPT:ICF /INCREMENTAL:NO")
+	set(relFlags "${relFlags} /GL")
+	set(relLinkFlags "${relLinkFlags} /LTCG")
+	set(CMAKE_C_FLAGS_RELEASE     "${CMAKE_C_FLAGS_RELEASE} /Oy ${relFlags}")
+	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Oy ${relFlags}")
+	set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} ${relLinkFlags}")
+	set(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} ${relLinkFlags}")
+	set(CMAKE_MODULE_LINKER_FLAGS_RELEASE "${CMAKE_MODULE_LINKER_FLAGS_RELEASE} ${relLinkFlags}")
 else ()
     add_definitions(-mavx -march=corei7-avx -mtune=corei7-avx)
     set(OPT_FLAGS "-O3 -ffast-math")
