--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -8,7 +8,9 @@ sceneInput: {
 graphicsSettings: {
 	xRes:				1600
 	yRes:				900
-	FOV:				107.0
+	presentMode:		"FIFO"			// Immediate, FIFO, FIFOrelaxed, Mailbox
+	buffersCount:		2				// Swapchain Images
+	FOV:				90.0
 	nearPlaneDistance:	1.0
 	farPlaneDistance:	100.0
 	useMipmaps:			false			// Waiting Compressonator SDK to support mipmapping
@@ -17,11 +19,11 @@ graphicsSettings: {
 inputSettings: {
 	mouseSensitivity:	0.001
 	keybinds: {
-		MoveForward:		["W","UP","LEFT_MOUSE"]
-		MoveBackward:		["S","DOWN","RIGHT_MOUSE"]
-		MoveLeft:			["A","LEFT"]
-		MoveRight:			["D","RIGHT"]
-		Exit:				["ESCAPE"]
+		MoveForward:	["W","UP","LEFT_MOUSE"]
+		MoveBackward:	["S","DOWN","RIGHT_MOUSE"]
+		MoveLeft:		["A","LEFT"]
+		MoveRight:		["D","RIGHT"]
+		Exit:			["ESCAPE"]
 	}
 }
 
