--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="src\NaiveCamera.cpp" />
     <ClCompile Include="src\MaterialsTextures.cpp" />
     <ClCompile Include="src\TexturesImagesUsage.cpp" />
+    <ClCompile Include="src\VulkanInit.cpp" />
     <ClCompile Include="src\WindowWithAsyncInput.cpp" />
     <ClCompile Include="src\Engine.cpp" />
     <ClCompile Include="src\Graphics.cpp" />
@@ -51,6 +52,7 @@
     <ClInclude Include="include\NaiveCamera.h" />
     <ClInclude Include="include\MaterialsTextures.h" />
     <ClInclude Include="include\TexturesImagesUsage.h" />
+    <ClInclude Include="include\VulkanInit.h" />
     <ClInclude Include="include\WindowWithAsyncInput.h" />
     <ClInclude Include="include\Engine.h" />
     <ClInclude Include="include\Graphics.h" />
