Add tree culling and other inner changes

--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -1,8 +1,8 @@
 // Config file using emilk/configuru CFG
 
 sceneInput: {
-	path:				"testModel/Sponza/Sponza.gltf"
-	imagesFolder:		"testModel/Sponza"
+	path:				"testModel/robot/robot.gltf"
+	imagesFolder:		"testModel/robot"
 }
 
 graphicsSettings: {
@@ -12,7 +12,7 @@ graphicsSettings: {
 	buffersCount:		2				// Swapchain Images
 	FOV:				90.0
 	nearPlaneDistance:	0.5
-	farPlaneDistance:	100.0
+	farPlaneDistance:	120.0
 	useMipmaps:			false			// Waiting Compressonator SDK to support mipmapping
 }
 
