--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -1,8 +1,8 @@
 // Config file using emilk/configuru CFG
 
 sceneInput: {
-	path:				"testModel/robot/robot.gltf"
-	imagesFolder:		"testModel/robot"
+	path:				"testModel/Sponza/Sponza.gltf"
+	imagesFolder:		"testModel/Sponza"
 }
 
 graphicsSettings: {
