--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
@@ -23,15 +23,15 @@
     <ClCompile Include="src\ViewportFrustum.cpp" />
     <ClCompile Include="src\InputManager.cpp" />
     <ClCompile Include="src\CameraBaseClass.cpp" />
-    <ClCompile Include="src\NodesMeshes.cpp" />
-    <ClCompile Include="src\PrimitivesMaterials.cpp" />
-    <ClCompile Include="src\PrimitivesShaders.cpp" />
-    <ClCompile Include="src\SceneNodes.cpp" />
-    <ClCompile Include="src\PrimitivesPipelines.cpp" />
-    <ClCompile Include="src\MeshesPrimitives.cpp" />
+    <ClCompile Include="src\MeshesOfNodes.cpp" />
+    <ClCompile Include="src\MaterialsOfPrimitives.cpp" />
+    <ClCompile Include="src\ShadersOfPrimitives.cpp" />
+    <ClCompile Include="src\NodesOfScene.cpp" />
+    <ClCompile Include="src\PipelinesOfPrimitives.cpp" />
+    <ClCompile Include="src\PrimitivesOfMeshes.cpp" />
     <ClCompile Include="src\NaiveCamera.cpp" />
-    <ClCompile Include="src\MaterialsTextures.cpp" />
-    <ClCompile Include="src\TexturesImagesUsage.cpp" />
+    <ClCompile Include="src\TexturesOfMaterials.cpp" />
+    <ClCompile Include="src\ImagesUsageOfTextures.cpp" />
     <ClCompile Include="src\VulkanInit.cpp" />
     <ClCompile Include="src\WindowWithAsyncInput.cpp" />
     <ClCompile Include="src\Engine.cpp" />
@@ -46,16 +46,16 @@
     <ClInclude Include="include\ViewportFrustum.h" />
     <ClInclude Include="include\glTFenum.h" />
     <ClInclude Include="include\hash_combine.h" />
-    <ClInclude Include="include\PrimitivesMaterials.h" />
-    <ClInclude Include="include\PrimitivesShaders.h" />
-    <ClInclude Include="include\NodesMeshes.h" />
-    <ClInclude Include="include\SceneNodes.h" />
-    <ClInclude Include="include\PrimitivesPipelines.h" />
-    <ClInclude Include="include\MeshesPrimitives.h" />
+    <ClInclude Include="include\MaterialsOfPrimitives.h" />
+    <ClInclude Include="include\ShadersOfPrimitives.h" />
+    <ClInclude Include="include\MeshesOfNodes.h" />
+    <ClInclude Include="include\NodesOfScene.h" />
+    <ClInclude Include="include\PipelinesOfPrimitives.h" />
+    <ClInclude Include="include\PrimitivesOfMeshes.h" />
     <ClInclude Include="include\CameraBaseClass.h" />
     <ClInclude Include="include\NaiveCamera.h" />
-    <ClInclude Include="include\MaterialsTextures.h" />
-    <ClInclude Include="include\TexturesImagesUsage.h" />
+    <ClInclude Include="include\TexturesOfMaterials.h" />
+    <ClInclude Include="include\ImagesUsageOfTextures.h" />
     <ClInclude Include="include\VulkanInit.h" />
     <ClInclude Include="include\WindowWithAsyncInput.h" />
     <ClInclude Include="include\Engine.h" />
