--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
@@ -19,7 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\DiTO\dito.cpp" />
+    <ClCompile Include="src\Cuboid.cpp" />
     <ClCompile Include="src\Drawer.cpp" />
+    <ClCompile Include="src\FrustumCulling.cpp" />
+    <ClCompile Include="src\OBB.cpp" />
+    <ClCompile Include="src\Plane.cpp" />
     <ClCompile Include="src\ViewportFrustum.cpp" />
     <ClCompile Include="src\InputManager.cpp" />
     <ClCompile Include="src\CameraBaseClass.cpp" />
@@ -40,9 +45,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Configuru\configuru.hpp" />
+    <ClInclude Include="..\DiTO\dito.h" />
     <ClInclude Include="..\tinygltf\stb_image.h" />
     <ClInclude Include="..\tinygltf\tiny_gltf.h" />
+    <ClInclude Include="include\Cuboid.h" />
     <ClInclude Include="include\Drawer.h" />
+    <ClInclude Include="include\FrustumCulling.h" />
+    <ClInclude Include="include\OBB.h" />
+    <ClInclude Include="include\Plane.h" />
     <ClInclude Include="include\ViewportFrustum.h" />
     <ClInclude Include="include\glTFenum.h" />
     <ClInclude Include="include\hash_combine.h" />
@@ -136,7 +146,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>false</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(VULKAN_SDK)\Include;..\Configuru;..\Anvil\build\include;..\Anvil\include;..\MathGeoLib\src;..\inMyRoom_vulkan\include;..\glm;..\Compressonator\Compressonator\Header;..\tinygltf;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(VULKAN_SDK)\Include;..\Configuru;..\Anvil\build\include;..\Anvil\include;..\DiTO;..\inMyRoom_vulkan\include;..\glm;..\Compressonator\Compressonator\Header;..\tinygltf;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <CompileAs>CompileAsCpp</CompileAs>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
@@ -148,10 +158,10 @@
       </FloatingPointExceptions>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>..\Compressonator\Compressonator\build;..\Anvil\build;..\MathGeoLib\build;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\Compressonator\Compressonator\build;..\Anvil\build;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>Debug\Compressonator.lib;Debug\MathGeoLib.lib;Debug\Anvil.lib;deps\glslang\SPIRV\Debug\SPIRVd.lib;deps\glslang\glslang\Debug\glslangd.lib;deps\glslang\OGLCompilersDLL\Debug\OGLCompilerd.lib;deps\glslang\glslang\OSDependent\Windows\Debug\OSDependentd.lib;$(VK_SDK_PATH)\Lib\vulkan-1.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Debug\Compressonator.lib;Debug\Anvil.lib;deps\glslang\SPIRV\Debug\SPIRVd.lib;deps\glslang\glslang\Debug\glslangd.lib;deps\glslang\OGLCompilersDLL\Debug\OGLCompilerd.lib;deps\glslang\glslang\OSDependent\Windows\Debug\OSDependentd.lib;$(VK_SDK_PATH)\Lib\vulkan-1.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <ProjectReference>
       <LinkLibraryDependencies>true</LinkLibraryDependencies>
@@ -181,7 +191,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>false</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(VULKAN_SDK)\Include;..\Configuru;..\Anvil\build\include;..\Anvil\include;..\MathGeoLib\src;..\inMyRoom_vulkan\include;..\glm;..\Compressonator\Compressonator\Header;..\tinygltf;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(VULKAN_SDK)\Include;..\Configuru;..\Anvil\build\include;..\Anvil\include;..\DiTO;..\inMyRoom_vulkan\include;..\glm;..\Compressonator\Compressonator\Header;..\tinygltf;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <CompileAs>CompileAsCpp</CompileAs>
       <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions);NDEBUG;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
@@ -195,10 +205,10 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\Compressonator\Compressonator\build;..\Anvil\build;..\MathGeoLib\build;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\Compressonator\Compressonator\build;..\Anvil\build;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SubSystem>Console</SubSystem>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
-      <AdditionalDependencies>Release\Compressonator.lib;Release\MathGeoLib.lib;Release\Anvil.lib;deps\glslang\SPIRV\Release\SPIRV.lib;deps\glslang\glslang\Release\glslang.lib;deps\glslang\OGLCompilersDLL\Release\OGLCompiler.lib;deps\glslang\glslang\OSDependent\Windows\Release\OSDependent.lib;$(VK_SDK_PATH)\Lib\vulkan-1.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Release\Compressonator.lib;Release\Anvil.lib;deps\glslang\SPIRV\Release\SPIRV.lib;deps\glslang\glslang\Release\glslang.lib;deps\glslang\OGLCompilersDLL\Release\OGLCompiler.lib;deps\glslang\glslang\OSDependent\Windows\Release\OSDependent.lib;$(VK_SDK_PATH)\Lib\vulkan-1.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
     <ProjectReference>
