--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj.filters
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj.filters
@@ -75,9 +75,6 @@
     <ClCompile Include="src\NodesOfScene.cpp">
       <Filter>Source Files\Scene</Filter>
     </ClCompile>
-    <ClCompile Include="src\ImagesUsageOfTextures.cpp">
-      <Filter>Source Files\Scene</Filter>
-    </ClCompile>
     <ClCompile Include="src\ViewportFrustum.cpp">
       <Filter>Source Files\Geometry</Filter>
     </ClCompile>
@@ -101,6 +98,9 @@
     </ClCompile>
     <ClCompile Include="src\ShadersSetsFamiliesCache.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ImagesAboutOfTextures.cpp">
+      <Filter>Source Files\Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -158,9 +158,6 @@
     <ClInclude Include="include\NodesOfScene.h">
       <Filter>Header Files\Scene</Filter>
     </ClInclude>
-    <ClInclude Include="include\ImagesUsageOfTextures.h">
-      <Filter>Header Files\Scene</Filter>
-    </ClInclude>
     <ClInclude Include="..\DiTO\dito.h">
       <Filter>Header Files\_etc</Filter>
     </ClInclude>
@@ -184,6 +181,9 @@
     </ClInclude>
     <ClInclude Include="include\ShadersSetsFamiliesCache.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ImagesAboutOfTextures.h">
+      <Filter>Header Files\Scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
