Naive mipmaps creation

--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -12,7 +12,7 @@ graphicsSettings: {
 	FOV:				90.0
 	nearPlaneDistance:	0.5
 	farPlaneDistance:	120.0
-	useMipmaps:			false			// Waiting Compressonator SDK to support mipmapping
+	useMipmaps:			true			
 }
 
 inputSettings: {
