--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj.filters
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="src\ImagesAboutOfTextures.cpp">
       <Filter>Source Files\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="src\MipmapsGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Engine.h">
@@ -184,6 +187,12 @@
     </ClInclude>
     <ClInclude Include="include\ImagesAboutOfTextures.h">
       <Filter>Header Files\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="include\const_maps.h">
+      <Filter>Header Files\_etc</Filter>
+    </ClInclude>
+    <ClInclude Include="include\MipmapsGenerator.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
