Debugging SceneNodes and changing main sceen

--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -1,7 +1,7 @@
 // Config file using emilk/configuru CFG
 
 sceneInput: {
-	path:				"testModel/Sponza/Sponza.gltf"
+	path:				"testModel/Table_room/scene.gltf"
 }
 
 graphicsSettings: {
@@ -10,8 +10,8 @@ graphicsSettings: {
 	presentMode:		"FIFO"			// Immediate, FIFO, FIFOrelaxed, Mailbox
 	buffersCount:		2				// Swapchain Images
 	FOV:				90.0
-	nearPlaneDistance:	0.5
-	farPlaneDistance:	120.0
+	nearPlaneDistance:	0.1
+	farPlaneDistance:	100.0
 	useMipmaps:			true			
 }
 
